wrap tables in .table-responsive. fix subchildren navigation

--- a/src/render/guides/styles/cmlcty/_main-content.less
+++ b/src/render/guides/styles/cmlcty/_main-content.less
@@ -13,6 +13,15 @@
     position: static;
     overflow: visible;
   }
+  .table-responsive{
+    width: 100%;
+    margin-bottom: 24px;
+    overflow-y: hidden;
+    overflow-x: auto;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+    border: 0 solid #dddddd;
+    -webkit-overflow-scrolling: touch;
+  }
 }
 
 @media(min-width: @screen-sm-min){
